# ppx_partial

./: LICENSE.md  README.md  dune-project  dune-workspace.dev  ppx_partial.opam
src/: dune
